[gd_scene load_steps=5 format=3 uid="uid://cu7tyxjgkvb2y"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_etyra"]
[ext_resource type="Texture2D" uid="uid://bhim5eo3kojvx" path="res://icon.svg" id="2_ivtbk"]
[ext_resource type="Script" path="res://Scenes/StayUpright.gd" id="3_n1snj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_thyhi"]
radius = 32.0

[node name="Player" type="RigidBody2D"]
script = ExtResource("1_etyra")

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprites"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ivtbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_thyhi")

[node name="RayCast2Ds" type="Node2D" parent="."]
script = ExtResource("3_n1snj")

[node name="GroundCast" type="RayCast2D" parent="RayCast2Ds"]
target_position = Vector2(0, 36)

[node name="LeftCast" type="RayCast2D" parent="RayCast2Ds"]
target_position = Vector2(-36, 0)

[node name="RightCast" type="RayCast2D" parent="RayCast2Ds"]
target_position = Vector2(36, 0)
